--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+.vscode/
+
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
