--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -67,20 +67,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Get pip cache location
-      shell: bash
-      id: pip_cache
-      run: |
-        python -m pip install -U pip
-        python -m pip --version
-        echo "pip_cache_dir=$(python -m pip cache dir)" | tee -a $GITHUB_OUTPUT
-
-    - name: Wheels cache
+    - name: uv cache
       uses: actions/cache@v4
       with:
-        path: ${{ steps.pip_cache.outputs.pip_cache_dir }}/wheels
-        key: ${{ runner.os }}-python-${{ matrix.python-version }}-pip-wheels-${{ hashFiles('requirements.txt', 'doc_requirements.txt') }}-${{ github.sha }}
-        restore-keys: ${{ runner.os }}-python-${{ matrix.python-version }}-pip-wheels-${{ hashFiles('requirements.txt', 'doc_requirements.txt') }}
+        path: |
+          ~/.cache/uv
+          ~\AppData\Local\uv\cache
+        key: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('pyproject.toml', 'requirements.txt', 'doc_requirements.txt', 'uv.lock') }}-${{ github.sha }}
+        restore-keys: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('pyproject.toml', 'requirements.txt', 'doc_requirements.txt', 'uv.lock') }}
 
     # We need to install all PNL deps since docs config imports psyneulink module
     - name: Install PNL package
