--- a/.github/workflows/pnl-ci.yml
+++ b/.github/workflows/pnl-ci.yml
@@ -118,20 +118,14 @@ jobs:
         git config user.email "none"
         git commit -a -m "Restrict version of direct dependencies to min"
 
-    - name: Get pip cache location
-      shell: bash
-      id: pip_cache
-      run: |
-        python -m pip install -U pip
-        python -m pip --version
-        echo "pip_cache_dir=$(python -m pip cache dir)" | tee -a $GITHUB_OUTPUT
-
-    - name: Wheels cache
+    - name: uv cache
       uses: actions/cache@v4
       with:
-        path: ${{ steps.pip_cache.outputs.pip_cache_dir }}/wheels
-        key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ matrix.python-architecture }}-pip-wheels-${{ hashFiles('requirements.txt', 'dev_requirements.txt') }}-${{ github.sha }}
-        restore-keys: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ matrix.python-architecture }}-pip-wheels-${{ hashFiles('requirements.txt', 'dev_requirements.txt') }}
+        path: |
+          ~/.cache/uv
+          ~\AppData\Local\uv\cache
+        key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ matrix.python-architecture }}-uv-${{ hashFiles('pyproject.toml', 'requirements.txt', 'dev_requirements.txt', 'tutorial_requirements.txt', 'uv.lock') }}-${{ github.sha }}
+        restore-keys: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ matrix.python-architecture }}-uv-${{ hashFiles('pyproject.toml', 'requirements.txt', 'dev_requirements.txt', 'tutorial_requirements.txt', 'uv.lock') }}
 
     - name: Install PNL package
       uses: ./.github/actions/install-pnl
