--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -67,14 +67,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: uv cache
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cache/uv
-          ~\AppData\Local\uv\cache
-        key: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('pyproject.toml', 'requirements.txt', 'doc_requirements.txt', 'uv.lock') }}-${{ github.sha }}
-        restore-keys: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('pyproject.toml', 'requirements.txt', 'doc_requirements.txt', 'uv.lock') }}
+    # uv is installed and cached by the composite action
 
     # We need to install all PNL deps since docs config imports psyneulink module
     - name: Install PNL package
